--- a/css/cssMain.css
+++ b/css/cssMain.css
@@ -15,21 +15,14 @@
 	margin-bottom: 50px;
 }
 
-#container p{
-	text-align: justify;
-}
-
-
-#header { 
+#header {
+	background-color: black;
 	width: 100%;
-	height: 50px;
-	background-color: #181818; 
 	text-align: center;
 	color: white;
 	font-size: 20px;
 	padding: 10px;
 }
-
 
 #footer {
     width: 100%;
@@ -37,24 +30,13 @@
     color: white;
     background-color: black;
     margin-top: -20px;
-    padding: 5px;
+		padding: 5px;
     text-align: center;
     position: fixed;
     bottom: 0;
     left: 0;
-	font-size: 18px;
+		font-size: 18px;
 }
-
-
-#start{
-	text-align: center;
-	width: 200px;
-	height: 50px;
-	font-size: 18px;
-	align-content: center;
-}
-
-
 
 #content{
 	width: 100%;
@@ -65,96 +47,16 @@
 	margin-bottom: 20px;
 }
 
-#contactTable {
-	width: 50%;
+#titol{
+	font-size: 20px;
+	font-style: bold;
+	text-align: center;
 }
 
-#contactTable td, th {
-	height: 50px;
-	width: 500px;
-
-}
-
-#explanation{
-	margin: 0;
-	padding: 10px;
-	color: black;
-	font-size: 16px;
-	
-}
-
-#dbcontent{
-	overflow: scroll;
-}
-
-#imgdb{
-    position: relative;
-    top: 120px;
-    left: 55px; 
-}
-
-#age, #newdate #newdate2{ border: none; }
-
-
-#communication{
+#noms{
 	text-align: center;
 	font-size: 14px;
-	padding: 20px;
-	border-radius: 10px;
-	
 }
-
-#log_out{
-	position: absolute;
-	right: 30px;
-}
-
-
-.sidebar{
-	width: 180px;
-	height: 100%;
-	min-height: 100vh;
-	float: left;
-	background-color: #181818;
-	margin-right: 30px;
-	overflow: auto;
-}
-
-.sidebar img{
-	display:block;
-	margin: 5px;
-}
-
-.sidebar ul li {
-	list-style: none;
-	padding: 10px;
-}
-
-.sidebar ul li:hover {
-	background-color: #D8D8D8;
-	cursor: pointer;
-	
-}
-
-.sidebar a:hover {
-	font-size: 120%;
-}
-
-.sidebar ul li a {
-	text-decoration: none;
-	color: white;
-	font-size: 12px;
-}
-
-
-.side-hide {
-	float: right;
-	margin: 20px;
-	color:white;
-	font-size: 24px;
-	cursor: pointer;
-}
-
 
 .content img {
 	float: left;
@@ -162,33 +64,6 @@
 	cursor: pointer;
 }
 
-
-
-.bordered{
-	width: 30px;
-}
-
-
-.member{
-	background-color: #8E8E8E;
-	width: 300px;
-	margin: 15px;
-	padding: 5px;
-	position: relative;
-    float: left;
-	overflow: scroll;
-}
-
-.fee{
-	background-color: #8E8E8E;
-	width: 300px;
-	margin: 15px;
-	padding: 5px;
-	position: relative; 
-	float:left;
-	overflow: scroll;
-
-}
 
 h1{
 	font-size: 20px;
@@ -201,14 +76,83 @@ h2{
 }
 
 h3{
-	font-size: 18px;
+	font-size: 14px;
 	display: inline;
-	text-align: right;
-	color: #2C30EB;
-	font-weight: bold;
+	text-align: left;
+}
+
+#enunciat, #activitat, #resultats{
+	text-align: justify;
+	padding-left: 40px;
+	padding-right: 40px;
 }
 
 p{
-	padding-left: 20px;
-	padding-right: 20px;
+	text-align: justify;
+	padding-left: 40px;
+	padding-right: 40px;
+}
+
+table {
+	margin: 0 auto;
+	padding: 10px;
+}
+
+td {
+	text-align: center;
+}
+
+#traduccions, #formulari {
+	margin: 0 auto;
+	width: 650 px;
+	border: 3px solid black;
+  border-collapse: collapse;
+	padding: 40px;
+}
+
+
+
+#t1, #t2, #t3, #t4, #t5 {
+	width: 600px;
+	height: 40px;
+}
+
+textarea {
+	width: 180px;
+	padding: 10px;
+}
+
+input {
+	width: 160px;
+	padding: 10px;
+}
+
+#timer {
+	position: fixed;
+	bottom: 10px;
+	left: 40px;
+	text-align: left;
+	color: white;
+}
+
+#usuarimalament, #contrasenyamalament, #formularierror	{
+	text-align: center;
+	color: red;
+}
+
+.pregresp {
+border: 1px solid #7DA5E0;
+padding: 10px;
+margin: 10px;
+font-family: Arial, Verdana, Helvetica, sans-serif;
+font-size: 15px;
+font-weight: bold;
+}
+
+.pregunta {
+color: #7DA5E0;
+}
+
+.respuestas {
+color: #000000;
 }
