--- a/css/cssMain.css
+++ b/css/cssMain.css
@@ -130,7 +130,8 @@ input {
 #timer {
 	position: fixed;
 	bottom: 10px;
-	left: 40px;
+	left: 50px;
+	background-color: #D8D8D8;
 	text-align: left;
 	color: white;
 }
