--- a/css/cssMain.css
+++ b/css/cssMain.css
@@ -15,6 +15,7 @@
 	margin-bottom: 50px;
 }
 
+
 #header {
 	background-color: black;
 	width: 100%;
@@ -116,7 +117,7 @@ td {
 	background-color: gray;
 }
 
-#modelpA, #modelpB, #modelpC, #inici, #final {
+#modelpA, #modelpB, #modelpC, #modelpD, #inici, #neg, #final {
 	margin: 0 auto;
 	width: 650 px;
 	border: 3px solid black;
@@ -150,7 +151,7 @@ input {
 	color: white;
 }
 
-#usuarimalament, #contrasenyamalament, #formularierror, #missatgefaltalogin	{
+#usuarimalament, #contrasenyamalament, #formularierror, #missatgefaltalogin, #textneg	{
 	text-align: center;
 	color: red;
 }
